# stackmap-consume-runner

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
src/consume/: consumefile.rs  mod.rs
src/database/: database.rs  filestable.rs  mod.rs  rastertable.rs  sanitize.rs
src/geo/: shape.rs
