[package]
name = "stackmap-consume"
version = "0.1.0"
edition = "2021"

[dependencies]
gdal = "0.16.0"
gdal-sys = "0.9.1"
once_cell = "1.19.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rusqlite = { version = "0.31.0", features = ["serde_json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres =  { version="0.7.10"}
uuid = { version="1.8.0", features = ["v4"] }

